Update App Logic & Add Review Page

--- a/Project2/covid19Survey-App/app/src/main/res/values/strings.xml
+++ b/Project2/covid19Survey-App/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="biontech">Biontech</string>
     <string name="side_effects">Side Effects</string>
     <string name="end_survey">End Survey</string>
+    <string name="submit">Submit</string>
 </resources>
